tests/rosetta/out/C/active-directory-connect.c
// Generated by Mochi compiler v0.10.26 on 2006-01-02T15:04:05Z
#include <stdio.h>
#include <stdlib.h>
#include <string.h>

typedef struct {
  int len;
  char **data;
} list_string;
static list_string list_string_create(int len) {
  list_string l;
  l.len = len;
  l.data = calloc(len, sizeof(char *));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
static char *concat_string(char *a, char *b) {
  size_t len1 = strlen(a);
  size_t len2 = strlen(b);
  char *buf = (char *)malloc(len1 + len2 + 1);
  memcpy(buf, a, len1);
  memcpy(buf + len1, b, len2);
  buf[len1 + len2] = '\0';
  return buf;
}
typedef struct LDAPClient LDAPClient;

typedef struct LDAPClient {
  char *Base;
  char *Host;
  int Port;
  int UseSSL;
  char *BindDN;
  char *BindPassword;
  char *UserFilter;
  char *GroupFilter;
  list_string Attributes;
} LDAPClient;
typedef struct {
  int len;
  l_d_a_p_client_t *data;
} l_d_a_p_client_list_t;
l_d_a_p_client_list_t create_l_d_a_p_client_list(int len) {
  l_d_a_p_client_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(l_d_a_p_client_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

int connect(LDAPClient *client) {
  return (strcmp(client->host, "") != 0) && client->port > 0;
}

int main() {
  list_string client = list_string_create(4);
  client.data[0] = "givenName";
  client.data[1] = "sn";
  client.data[2] = "mail";
  client.data[3] = "uid";
  l_d_a_p_client_t client =
      (LDAPClient){.base = "dc=example,dc=com",
                   .host = "ldap.example.com",
                   .port = 389,
                   .use_s_s_l = 0,
                   .bind_d_n = "uid=readonlyuser,ou=People,dc=example,dc=com",
                   .bind_password = "readonlypassword",
                   .user_filter = "(uid=%s)",
                   .group_filter = "(memberUid=%s)",
                   .attributes = client};
  if (connect(&client)) {
    char *tmp1 = concat_string("Connected to ", client.host);
    printf("%s\n", tmp1);
  } else {
    printf("Failed to connect\n");
  }
}

int main() {
  main();
  return 0;
}
